--- a/index.html
+++ b/index.html
@@ -1,8 +1,17 @@
 <!DOCTYPE html>
 <html>
 	<head>
+	  <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
+	  <link type="text/css" rel="stylesheet" href="css/animate.css"  media="screen,projection"/>
+	  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
-	<body>
-	
+	<body class="flow-text">
+		 <!-- javascripts.. -->
+	  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
+	  <script src="js/jquery.lettering.js"></script>
+	  <script src="js/jquery.textillate.js"></script>
+	  <script type="text/javascript" src="js/materialize.min.js"></script>
+	  <script type="text/javascript" src='/js/scrollReveal.min.js'></script>
 	</body>
 </html>
