nav bar included

--- a/index.html
+++ b/index.html
@@ -7,6 +7,25 @@
 	  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	</head>
 	<body class="flow-text">
+		<!-- Navigation starting -->
+
+		<nav>
+		    <div class="nav-wrapper green">
+		      <a href="#home" class="brand-logo" >Xplora</a>
+		      <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
+		      <ul class="right hide-on-med-and-down">
+		        <li><a href="#home"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">home</i></a></li>
+		        <li><a href="#"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">person</i></a></li>
+		      </ul>
+		      <ul class="side-nav" id="mobile-demo">
+		     	<li><a href="#"><i class="Small material-icons">home</i></a></li>
+		        <li><a href=""><i class="Small material-icons">person</i></a></li>
+		      </ul>
+		    </div>
+		</nav>
+
+    <!-- Navigation ending --> 
+    
 		 <!-- javascripts.. -->
 	  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	  <script src="js/jquery.lettering.js"></script>
