main division included

--- a/index.html
+++ b/index.html
@@ -25,7 +25,20 @@
 		</nav>
 
     <!-- Navigation ending --> 
-    
+    <!-- main division included -->
+    	<div class="row">
+	      <div class="col s12" style="height:auto"> 
+	     	 <div class="container" id="image" data-sr="wait 0.5s, ease-in-out 100px">
+	      		<center><img src="images/key2.png" style="width:80%;height:auto" onmouseover="this.src='images/key1.png'" onmouseout="this.src='images/key2.png'"/></center>
+		      </div>
+		      <div class="container" id="image" data-sr="wait 0.5s, ease-in-out 100px">
+	      		<center><h1>A Non-Profit IT Organization</h1></center>
+		      </div>
+		  </div>
+	    </div>
+	 <!-- main division included -->
+
+
 		 <!-- javascripts.. -->
 	  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	  <script src="js/jquery.lettering.js"></script>
