who is and who can block included

--- a/index.html
+++ b/index.html
@@ -39,6 +39,46 @@
 	 <!-- main division included -->
 
 
+	 <!-- who is -->
+	 <div class="row blue" data-sr="wait 0.5s, ease-in-out 100px">
+      <div class="col s12"> 
+     	 <div class="container">
+      			<center><p style="color:white;font-size:46px" class="title">who is xplorianz ?</p></center>
+	      </div>
+	   </div>
+	  
+	</div>
+
+	<div class="row" data-sr="wait 0.5s, ease-in-out 100px">
+      <div class="col s12"> 
+     	 <div class="container" data-sr="opacity 0.5" style="padding:5%">
+      			<ul class="whois" style="font-size:46px">
+      				<li>The one who want to help people by learning new technology stack.</li>
+      				<li>The one who love to code.</li>
+      				<li>The one who eager to learn new ideas.</p></li>
+      				<li>The one who loves opensource community.</li>
+      				<li>The one who loves linux.</li>
+      				<li>The one who is creative.</li>
+      			</ul>
+	      </div>
+	   </div>
+	</div>
+	<!-- who is end -->
+
+	<!-- who can join -->
+	<div class="row red" data-sr="wait 0.5s, ease-in-out 100px">
+      <div class="col s12"> 
+     	 <div class="container">	
+      			<center><p style="font-size:46px;color:white" class="title">who can be the part of that ?</p></center>
+	      </div>
+	   </div>
+	   
+	</div>
+	<div class="container" data-sr="wait 0.5s, ease-in-out 100px">
+		<center><img src="images/coding.jpg" style="width:60%;height:auto"/></center>
+		<center><p class="whois"><b>Googler + Enthusiast + Learner</b></p></center>
+ 	</div>
+ 	<!-- who can join end -->
 		 <!-- javascripts.. -->
 	  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	  <script src="js/jquery.lettering.js"></script>
