--- a/index.html
+++ b/index.html
@@ -79,6 +79,38 @@
 		<center><p class="whois"><b>Googler + Enthusiast + Learner</b></p></center>
  	</div>
  	<!-- who can join end -->
+
+ 	<!-- who can contact us -->
+ 	<div class="row blue" data-sr="wait 0.5s, ease-in-out 100px">
+      <div class="col s12"> 
+     	 <div class="container">
+      			<center><p style="color:white;font-size:46px" class="title">who can contact us ?</p></center>
+	      </div>
+	   </div>
+	</div>
+
+	<div class="row" data-sr="wait 0.5s, ease-in-out 100px">
+      <div class="col s12"> 
+     	 <div class="container" data-sr="opacity 0.5" style="padding:5%">
+      			<ul class="whois" style="font-size:46px">
+      				<li>Do you want your own website ?</li>
+      				<li>Do you have a business ?</p></li>
+      				<li>We fill the gap between clients and You.</li>
+      			</ul>
+	      </div>
+	   </div>
+	</div>
+	<!-- who can contact us end -->
+
+	<!-- footer section -->
+	<footer class="green" id="footer">
+    <div class="container" style="padding:10%;font-size:36px">	
+		<center><p class="footer" style="color:white">Xplora - The community of programmers </p></center>
+		<center><p class="footer" style="color:white">SHARE + DISCUSS + LEARN  + GROW  </p></center>
+		<center><p class="footer" style="color:white">We are Xplorianz  </p></center>
+ 	</div>
+	</footer>  
+	<!-- footer end -->
 		 <!-- javascripts.. -->
 	  <script type="text/javascript" src="js/jquery-2.1.4.min.js"></script>
 	  <script src="js/jquery.lettering.js"></script>
