--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		      <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
 		      <ul class="right hide-on-med-and-down">
 		        <li><a href="#home"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">home</i></a></li>
-		        <li><a href="#"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">person</i></a></li>
+		        <li><a href="http://www.about.me/errakeshpd"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">person</i></a></li>
 		      </ul>
 		      <ul class="side-nav" id="mobile-demo">
 		     	<li><a href="#"><i class="Small material-icons">home</i></a></li>
@@ -116,7 +116,7 @@
 	  <script src="js/jquery.lettering.js"></script>
 	  <script src="js/jquery.textillate.js"></script>
 	  <script type="text/javascript" src="js/materialize.min.js"></script>
-	  <script type="text/javascript" src='/js/scrollReveal.min.js'></script>
+	  <script type="text/javascript" src='js/scrollReveal.min.js'></script>
 	  <script>
 	       $(document).ready(function(){
      			 var config = {
