--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
 		      <a href="#home" class="brand-logo" >Xplora</a>
 		      <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
 		      <ul class="right hide-on-med-and-down">
-		        <li><a href="#home"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">home</i></a></li>
-		        <li><a href="http://www.about.me/errakeshpd"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">person</i></a></li>
+		        <li><a href="/"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">home</i></a></li>
+		        <li><a href="http://errakeshpd.github.io"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">person</i></a></li>
 		      </ul>
 		      <ul class="side-nav" id="mobile-demo">
-		     	<li><a href="#"><i class="Small material-icons">home</i></a></li>
-		        <li><a href=""><i class="Small material-icons">person</i></a></li>
+		     	<li><a href="/"><i class="Small material-icons">home</i></a></li>
+		        <li><a href="http://errakeshpd.github.io"><i class="Small material-icons">person</i></a></li>
 		      </ul>
 		    </div>
 		</nav>
