Added linked in profile
Added linkedin profile

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
 		      <a href="#" data-activates="mobile-demo" class="button-collapse right"><i class="material-icons">menu</i></a>
 		      <ul class="right hide-on-med-and-down">
 		        <li><a href="/"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">home</i></a></li>
-		        <li><a href="http://errakeshpd.github.io"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">person</i></a></li>
+		        <li><a href="https://www.linkedin.com/profile/view?id=85964206"><i class="Small material-icons" data-sr="wait 0.5s, ease-in-out 100px">person</i></a></li>
 		      </ul>
 		      <ul class="side-nav" id="mobile-demo">
 		     	<li><a href="/"><i class="Small material-icons">home</i></a></li>
-		        <li><a href="http://errakeshpd.github.io"><i class="Small material-icons">person</i></a></li>
+		        <li><a href="https://www.linkedin.com/profile/view?id=85964206"><i class="Small material-icons">person</i></a></li>
 		      </ul>
 		    </div>
 		</nav>
